# project_agent_framework

./: .gitignore  README.md  package.json  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: product-owner.md  project-manager.md  senior-engineer.md  software-architect.md  tester.md
conventions/: core.md  python.md  testing.md  typescript.md
docs/guides/: quick-reference.md  usage-guide.md
templates/: adr-template.md  task-template.md  user-story-template.md
